--- a/front-end/src/app/quiz-sequence/quiz-end/quiz-end.component.scss
+++ b/front-end/src/app/quiz-sequence/quiz-end/quiz-end.component.scss
@@ -11,3 +11,12 @@
     border-color:  rgb(243, 58, 144);
     text-align: center;
 }
+
+.button-big {
+    font-size: 200%;
+    //margin-top: 5%;
+    margin-bottom: 5%;
+    width: 80%;
+    height: 30%;
+    text-align: center;
+  }
