--- a/front-end/src/app/quiz-sequence/question-widget/question-widget.component.scss
+++ b/front-end/src/app/quiz-sequence/question-widget/question-widget.component.scss
@@ -16,8 +16,9 @@
     padding: 0.5em 0;
     font-size: 350%;
     margin-top: 5%;
-    width: 100%;
-    height: 80%;
+    margin-bottom: 5%;
+    width: 80%;
+    height: 50%;
     text-align: center;
     cursor: pointer;;
   }
