--- a/front-end/src/app/quiz-sequence/quiz-end/quiz-end.component.html
+++ b/front-end/src/app/quiz-sequence/quiz-end/quiz-end.component.html
@@ -1,10 +1,8 @@
 <!--<button class="button-card" routerLink= "/customers">Retour</button>-->
 
 <div class="box">
-    <h1>Bravo!</h1><!--Prénom-->
-    <br>
-    <button class="button-card" routerLink= "..">Recommencer</button>
-    <br>
-    <button class="button-card" routerLink= "/customers">Retour aux quiz</button>
+    <div *ngIf="user"><h1>Bravo {{user.name}} !<!--Prénom--></h1></div>
+    <button class="button-card button-big" routerLink= "..">Recommencer</button>
+    <button class="button-card button-big" routerLink= "/customers">Retour aux quiz</button>
 </div>
 
