--- a/front-end/src/app/quiz-sequence/question-widget/question-widget.component.html
+++ b/front-end/src/app/quiz-sequence/question-widget/question-widget.component.html
@@ -12,7 +12,7 @@
         <app-answer-list-widget [answers] = "currentQuestion.answers" (selected) = "onSelectedAnswer($event)" (next) = "onNext($event)"></app-answer-list-widget>
     </div>
     <ng-template #elseBlock>
-        <button class="button-card button-recap" routerLink= "./quiz-summary">Récaptulatif</button>
-        <button class="button-card button-recap" routerLink= "../..">Sauter le récaptulatif</button>
+        <button class="button-card button-recap" routerLink= "./quiz-summary">Récapitulatif</button>
+        <button class="button-card button-recap" routerLink= "../..">Sauter le récapitulatif</button>
     </ng-template>
 </div>
