--- a/front-end/src/app/quiz-sequence/quiz-end/quiz-end.component.scss
+++ b/front-end/src/app/quiz-sequence/quiz-end/quiz-end.component.scss
@@ -15,8 +15,8 @@
 .button-big {
     font-size: 200%;
     //margin-top: 5%;
-    margin-bottom: 5%;
-    width: 80%;
-    height: 30%;
+    //margin-bottom: 5%;
+    //width: 80%;
+    //height: 30%;
     text-align: center;
   }
