--- a/front-end/src/app/quiz-sequence/quiz-end/quiz-end.component.html
+++ b/front-end/src/app/quiz-sequence/quiz-end/quiz-end.component.html
@@ -1,8 +1,11 @@
 <!--<button class="button-card" routerLink= "/customers">Retour</button>-->
 
 <div class="box">
-    <div *ngIf="user"><h1>Bravo {{user.name}} !<!--Prénom--></h1></div>
-    <button class="button-card button-big" routerLink= "..">Recommencer</button>
-    <button class="button-card button-big" routerLink= "/customers">Retour aux quiz</button>
+    <div *ngIf="user">
+        <h1>Bravo {{user.name}} !<!--Prénom--></h1>
+        <button class="button-card button-big" routerLink= "..">Recommencer</button>
+        <button class="button-card button-big" routerLink= "/customers/{{user.id}}">Choisir un autre quiz</button>
+        <button class="button-card button-big" routerLink= "/customers">Changer d'accueilli</button>
+    </div>
 </div>
 
