--- a/front-end/src/app/quiz-sequence/display-right-versus-answer-selected/display-right-versus-answer-selected.component.html
+++ b/front-end/src/app/quiz-sequence/display-right-versus-answer-selected/display-right-versus-answer-selected.component.html
@@ -1,12 +1,12 @@
 <div *ngIf="answerSelected !==null && answerSelected!=rightAnswer; else elseBlock" class="box-answers">
     <div class="answer-li">Votre réponse:<br>
         <div *ngIf="answerSelected.value">{{answerSelected.value}}</div>
-        <div *ngIf="imageSel.url" class="frame"><img class="thumbnail" [src]="getImgSrcSel()" alt="answer image"></div>
+        <div *ngIf="imageSel.url" class="frame"><img class="thumbnail" [src]="imageService.getImgSrc1(imageSel)" alt="answer image"></div>
     </div>
     <div class="separation"></div>
     <div *ngIf = "rightAnswer" class="answer-li">Bonne réponse:<br>
         <div *ngIf="rightAnswer.value">{{rightAnswer.value}}</div>
-        <div *ngIf="image.url" class="frame"><img class="thumbnail" [src]="getImgSrc()" alt="answer image"></div>
+        <div *ngIf="image.url" class="frame"><img class="thumbnail" [src]="imageService.getImgSrc1(image)" alt="answer image"></div>
     </div>
 </div>
 <ng-template #elseBlock>
