--- a/front-end/src/app/quiz-sequence/quiz-summary/quiz-summary.component.html
+++ b/front-end/src/app/quiz-sequence/quiz-summary/quiz-summary.component.html
@@ -5,7 +5,7 @@
         <h2>-{{quiz.name}}-</h2>
         <div *ngIf = "currentQuestion">
             <div *ngIf="currentQuestion.label">{{currentQuestion.label}}</div>
-            <div *ngIf="image.url" class="frame"><img class="thumbnail" [src]="getImgSrc()" alt="question image"></div>
+            <div *ngIf="image.url" class="frame"><img class="thumbnail" [src]="imageService.getImgSrc1(image)" alt="question image"></div>
             <app-display-right-answer [answers] = "currentQuestion.answers"></app-display-right-answer>
         </div>
     <div *ngIf = "questions.length!==0; else elseBlock">
